tests/baselines/reference/tsxGenericAttributesType5.errors.txt
file.tsx(11,5): error TS2416: Property 'props' in type 'B<U>' is not assignable to the same property in base type 'Component<U, {}>'.
  Type 'U' is not assignable to type 'U & { children?: ReactNode | undefined; }'.
    Type 'U' is not assignable to type '{ children?: ReactNode | undefined; }'.
file.tsx(11,5): error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.


==== file.tsx (2 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    class B1<T extends { x: string }> extends React.Component<T, {}> {
        render() {
            return <div>hi</div>; 
        }
    }
    class B<U> extends React.Component<U, {}> {
        props: U;
        ~~~~~
!!! error TS2416: Property 'props' in type 'B<U>' is not assignable to the same property in base type 'Component<U, {}>'.
!!! error TS2416:   Type 'U' is not assignable to type 'U & { children?: ReactNode | undefined; }'.
!!! error TS2416:     Type 'U' is not assignable to type '{ children?: ReactNode | undefined; }'.
!!! related TS2208 file.tsx:10:9: This type parameter might need an `extends { children?: React.ReactNode; }` constraint.
        ~~~~~
!!! error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.
        render() {
            return <B1 {...this.props} x="hi" />;
        }
    }